diarization for all except "legacy" which no one uses.
